# packingelf

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
desktop-app/: .qmlls.ini  CMakeLists.txt  CMakePresets.json  app_icon.rc
desktop-app/app/: main.cpp  wiring.cpp  wiring.h
desktop-app/data/: Database.cpp  Database.h  OrdersRepository.cpp  OrdersRepository.h
desktop-app/mock/: MOCK_DATA.csv
desktop-app/services/: AppLog.cpp  AppLog.h  AppSupportService.cpp  AppSupportService.h  HostClient.cpp  HostClient.h  JavaProcess.h  OutboxStore.cpp  OutboxStore.h  ScraperService.cpp  ScraperService.h  SyncService.cpp  SyncService.h  UpdaterService.cpp
desktop-app/state/: AppSettings.cpp  AppSettings.h  Lifecycle.scxml
desktop-app/ui/: App.qml  AppDialog.qml  Constants.qml  NavStore.qml  Theme.qml  qmldir
desktop-app/ui/components/: Card.qml  ContentPage.qml  CustomBusyIndicator.qml  CustomButton.qml  CustomCheckBox.qml  CustomDropdown.qml  CustomEntry.qml  CustomProgressBar.qml  CustomSpinBox.qml  CustomTable.qml  MetricCard.qml  NavButton.qml  Sidebar.qml  StatusLight.qml  StatusPopup.qml  WindowTitleBar.qml
desktop-app/ui/views/: HistoryPage.qml  HomePage.qml  MainScreen.qml  PrintingPage.qml  SettingPage.qml
desktop-app/viewmodels/: DashboardViewModel.cpp  DashboardViewModel.h  OrderTableViewModel.cpp  OrderTableViewModel.h  OrdersViewModel.cpp  OrdersViewModel.h  PendingOrdersViewModel.cpp  PendingOrdersViewModel.h
docs/: INSTALLATION.md  TESTING.md
host-service/: build.ps1  pom.xml  smoke-test.ps1
host-service/src/main/java/: module-info.java
host-service/src/main/java/com/meridian/packingelf/host/: HostApiServer.java  HostApplication.java  HostClientInfo.java  HostDatabase.java  HostExportService.java  HostLauncher.java  HostOrder.java  HostRepository.java  HostRuntime.java  MdnsAdvertiser.java
host-service/src/main/resources/: host.css
installers/ifw/config/: config.xml
installers/inno/: packingelf.iss
old_version_code/: myacg_manager.py
ops/: .env  docker-compose.yml
scraper/: __main__.py  build.ps1  requirements.txt  scraper.bat
scraper/src/: __init__.py  __main__.py  account_store.py  models.py  scraper.py
scripts/: build-installer.ps1
